# websocket-next

./: .gitignore  Cargo.toml
.github/: CONTRIBUTING.md
src/: main.rs  redis.rs
src/model/: commands.rs  discord.rs  events.rs  mod.rs  other.rs  payload.rs
src/utils/: error.rs
