[package]
name = "websocket-next"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "websocket-next"
path = "src/main.rs"

[dependencies]
actix-rt = "1.0"
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
redis = "0.15"
bytes = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7"
